# axum-diesel-example

./: .editorconfig  .env  .gitignore  Cargo.toml  README.md  clippy.toml  diesel.toml  index.html  login.html  slides.typ
frontend/: index.html  login.html
frontend/scripts/: index.js  login.js  qr_segment.js
frontend/styles/: login.css  main.css  style.css
migrations/2025-08-16-164345_create_users/: up.sql
migrations/2025-08-16-204459_create_transactions/: up.sql
scripts/: login.js  sha256.js
src/: error.rs  extractor_error.rs  jwt.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  schema.rs.patch  state.rs  user.rs  utils.rs
src/handlers/: auth.rs  transaction.rs  transactions.rs  user.rs
src/middleware/: auth.rs
src/models/: auth_body.rs  transaction.rs  transactions.rs  types.rs  user.rs
src/models/types/: big_decimal.rs  secret_string.rs  uuid.rs
src/routes/: auth.rs  transaction.rs  transactions.rs  transactions_ws.rs  user.rs
styles/: login.css  main.css  style.css
