[package]
name = "axum-diesel-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = [] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.131", features = [] }
strum = { version = "0.26.3", features = [] }
strum_macros = { version = "0.26.3", features = [] }
thiserror = { version = "2.0.3", features = [] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = [] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
tracing = { version = "0.1.40", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
arithmetic_side_effects = "warn"
unused_trait_names = "warn"
