[package]
name = "axum-diesel-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
anyhow = { version = "1.0.98", default-features = false, features = ["std"] }
axum = { version = "0.8.4", default-features = false, features = ["http1", "http2", "json", "macros", "tokio", "tower-log", "tracing"] }
axum-extra = { version = "0.10.1", default-features = false, features = ["tracing"] }
base64ct = { version = "1.7.3", default-features = false, features = ["std"] }
bigdecimal = { version = "0.4.7", default-features = false, features = ["serde-json", "std"] }
biscuit = { version = "0.7.0", default-features = false, features = [] }
chrono = { version = "0.4.39", default-features = false, features = ["now", "std"] }
dotenvy = { version = "0.15.7", default-features = false, features = [] }
jiff = { version = "0.2.12", default-features = false, features = ["perf-inline", "serde", "std"] }
password-auth = { version = "1.0.0", default-features = false, features = ["argon2", "std"] }
rand = { version = "0.9.1", default-features = false, features = ["std", "thread_rng"] }
secrecy = { version = "0.10.3", default-features = false, features = ["serde"] }
serde = { version = "1.0.217", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.131", default-features = false, features = ["std"] }
tokio = { version = "1.41.1", default-features = false, features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5.2", default-features = false, features = ["log", "timeout"] }
tower-http = { version = "0.6.1", default-features = false, features = ["cors", "fs", "trace"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter", "fmt", "smallvec", "std", "tracing-log"] }
url = { version = "2.5.4", default-features = false, features = ["serde", "std"] }
uuid = { version = "1.15.1", default-features = false, features = ["serde", "std", "v4", "v7"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
arithmetic_side_effects = "warn"
unused_trait_names = "warn"
